# rollwright

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package.json  server.mjs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md
docs/v1/: V1_BASELINE.md  V1_RELEASE_CHECKLIST.md
docs/v2/: AI_GUARDRAILS.md  COMPETITOR_PARITY_MATRIX.md  DATA_MODEL_SKETCH.md  V2_APP_STATUS.md  V2_DESIGN_DOC.md  V2_DESKTOP_AI_ARCHITECTURE.md  V2_IMPLEMENTATION_PROMPT.md  V2_ROADMAP.md
src/: app.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs
v2/: DEPRECATED.md  index.html
v2/src/: v2.css  v2.js
