[package]
name = "rollwright"
version = "2.0.0-alpha.0"
description = "Rollwright Desktop"
edition = "2021"

[lib]
name = "rollwright_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
